# adaptive-market-regime-research

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  run_research.py
src/amrrp/: __init__.py  cli.py
src/amrrp/analytics/: __init__.py  performance.py  regime_comparison.py
src/amrrp/backtesting/: __init__.py  costs.py  engine.py  events.py  execution.py  metrics.py  portfolio.py  sizing.py
src/amrrp/core/: __init__.py  exceptions.py  interfaces.py  types.py
src/amrrp/dashboard/: app.py
src/amrrp/data/: __init__.py  cache.py  cleaning.py  providers.py  repository.py  validation.py
src/amrrp/experiments/: __init__.py  runner.py  specification.py  tracking.py
src/amrrp/explainability/: __init__.py  feature_importance.py  pca.py  shap_analysis.py  transitions.py
src/amrrp/features/: __init__.py  base.py  cross_asset.py  pipeline.py  registry.py  statistical.py  technical.py
src/amrrp/regimes/: __init__.py  base.py  bayesian_changepoint.py  gmm.py  hmm.py  kmeans.py  labeling.py  visualization.py
src/amrrp/reporting/: __init__.py  exporter.py  plots.py  report_builder.py  tables.py
src/amrrp/strategies/: base.py  buy_and_hold.py  ma_crossover.py  mean_reversion.py  momentum.py  volatility_breakout.py
src/amrrp/utils/: __init__.py
tests/integration/: test_research_flow.py
tests/unit/: test_backtesting.py  test_data.py
