[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "adaptive-market-regime-research-platform"
version = "0.1.0"
description = "Research platform for detecting market regimes and evaluating strategies across them."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Adaptive Market Regime Research Platform Contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.26", "pandas>=2.2", "scipy>=1.12", "yfinance>=0.2",
  "scikit-learn>=1.4", "hmmlearn>=0.3",
  "statsmodels>=0.14", "ta>=0.11", "plotly>=5.20", "matplotlib>=3.8",
  "seaborn>=0.13", "streamlit>=1.32", "pydantic>=2.6", "pydantic-settings>=2.2",
  "PyYAML>=6.0", "joblib>=1.3", "pyarrow>=15.0", "shap>=0.45", "rich>=13.7", "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.100", "ruff>=0.5", "mypy>=1.10", "pandas-stubs>=2.2", "types-PyYAML>=6.0", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/amrrp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["amrrp"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src"]
